Fixed issue with **FTB Ultimine** mod and other mods which offers similar features. Added smaller performance optimization mostly for memory usage and unnecessary object instances.